more experiments, add freeze backbone

--- a/configs/callbacks/default.yaml
+++ b/configs/callbacks/default.yaml
@@ -6,11 +6,13 @@ defaults:
 
 model_checkpoint:
   dirpath: ${paths.output_dir}/checkpoints
-  filename: "epoch_{epoch:03d}"
+  filename: "epoch_{epoch:04d}"
   monitor: "val/acc"
   mode: "max"
   save_last: True
   auto_insert_metric_name: False
+  save_top_k: -1
+  every_n_epochs: 100
 
 # early_stopping:
 #   monitor: "val/acc"
@@ -18,7 +20,7 @@ model_checkpoint:
 #   mode: "max"
 
 model_summary:
-  max_depth: -1
+  max_depth: 3
 
 lr_monitor:
   _target_: lightning.pytorch.callbacks.LearningRateMonitor
