--- a/configs/experiment/v2-eg-full-pretrain.yaml
+++ b/configs/experiment/v2-eg-full-pretrain.yaml
@@ -11,11 +11,11 @@ defaults:
 # all parameters below will be merged with parameters from default configurations set above
 # this allows you to overwrite only specified parameters
 
-tags: ["eg1800", "mobilenetv2", "not_pretrained", "boundary_loss", "consistency_loss"]
+tags: ["eg1800", "mobilenetv2", "boundary_loss", "consistency_loss"]
 
 trainer:
   min_epochs: 1
-  max_epochs: 2000
+  max_epochs: 500
   check_val_every_n_epoch: 10
 
 model:
@@ -23,6 +23,7 @@ model:
   use_boundary_loss: true
   use_consistency_loss: true
   compile: true
+  freeze: true
 
 data:
   batch_size: 64
