--- a/configs/experiment/v3-sp-boundary.yaml
+++ b/configs/experiment/v3-sp-boundary.yaml
@@ -4,24 +4,24 @@
 # python train.py experiment=example
 
 defaults:
-  - override /data: eg1800
-  - override /model: mobilenetv2
+  - override /data: supervisely
+  - override /model: mobilenetv3
   - override /trainer: default
 
 # all parameters below will be merged with parameters from default configurations set above
 # this allows you to overwrite only specified parameters
 
-tags: ["eg1800", "mobilenetv2", "not_pretrained", "boundary_loss", "consistency_loss"]
+tags: ["supervisely", "mobilenetv3", "not_pretrained", "boundary_loss"]
 
 trainer:
   min_epochs: 1
-  max_epochs: 2000
+  max_epochs: 500
   check_val_every_n_epoch: 10
 
 model:
-  pretrained: true
+  pretrained: false
   use_boundary_loss: true
-  use_consistency_loss: true
+  use_consistency_loss: false
   compile: true
 
 data:
