--- a/configs/experiment/v2-eg-full.yaml
+++ b/configs/experiment/v2-eg-full.yaml
@@ -15,11 +15,11 @@ tags: ["eg1800", "mobilenetv2", "not_pretrained", "boundary_loss", "consistency_
 
 trainer:
   min_epochs: 1
-  max_epochs: 2000
+  max_epochs: 500
   check_val_every_n_epoch: 10
 
 model:
-  pretrained: true
+  pretrained: false
   use_boundary_loss: true
   use_consistency_loss: true
   compile: true
