--- a/configs/model/mobilenetv2.yaml
+++ b/configs/model/mobilenetv2.yaml
@@ -13,6 +13,8 @@ use_boundary_loss: true
 use_consistency_loss: true
 
 compile: null
+freeze: null
+residual_adapters: null
 
 optimizer:
   lr: 0.001
